实现了我的大赛业务层

--- a/src/main/Resources/log4j.properties
+++ b/src/main/Resources/log4j.properties
@@ -1,5 +1,5 @@
 # Global logging configuration
-log4j.rootLogger=INFO, stdout, R
+log4j.rootLogger=DEBUG, stdout, R
 # MyBatis logging configuration...
 log4j.logger.lyw=TRACE
 # Console output...
