--- a/src/main/Resources/jdbc.properties
+++ b/src/main/Resources/jdbc.properties
@@ -1,5 +1,5 @@
 #数据库配置文件
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/signup?useUnicode=true&characterEncoding=utf8
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/signup?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT
 jdbc.username=nb
 jdbc.password=654321
