--- a/pom.xml
+++ b/pom.xml
@@ -374,5 +374,14 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <resources>
+            <resource>
+                <directory>webapp/img</directory>
+                <includes>
+                    <include>*.*</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
+
 </project>
